Only end effect if it is not active any more

BUG: 274550
FIXED-IN: 4.7.0